--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<form action="login.php" method="post">
-  Username:<br />
-  <input type="text" name="username" />
-  <br />
-  Password:<br />
-  <input type="password" name="password" />
-  <br />
-  <input type="submit" value="Submit" />
-</form>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Forum</title>
+  </head>
+  <body>
+    <h1>Forum</h1>
+    <p>Hejsan och välkommen</p>
+    <button onclick="window.location.href='login.html'">Login</button>
+    <button onclick="window.location.href='register.html'">Register</button>
+  </body>
+</html>
