--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Register</title>
   </head>
   <body>
     <h1>Register to forum</h1>
@@ -16,6 +16,5 @@
       <br />
       <input type="submit" value="Submit" />
     </form>
-    
   </body>
 </html>
