--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Login to forum</h1>
-    <form action="login.php" method="post">
+    <form action="login.php" method="post" id="loginform">
       Username:<br />
       <input type="text" name="username" />
       <br />
